tests/parser/tests/cases/should_fail/incomplete_tuple_literal_type_annotation/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:32
1 |   k : (str, bar: u8) -> u32 = (k: );
  |                                  ^ here
  = note: expected a type annotation.
